tests/src/tests/fail/no-macro-args.stderr
error: expected `sync_signature` or `async_signature`
 --> src/tests/fail/no-macro-args.rs:3:17
  |
3 | #[async_generic(Send)]
  |                 ^^^^
